test/language/spec/syntax/invalid/missing_semicolon.topo
// TEST: missing semicolon after function declaration
// EXPECT-ERROR: expected ';'

namespace app {
  public:
    void run()
}
